# VC_Legenden

./: .gitignore  README.md  convert.sh  exercise_02.md  exercise_02.py  exercise_05.py
assignment1/: 5a.py  5b.py  sol.xopp
assignment2/: LICENSE  README.md  exercise_02.md  exercise_05.py  hog.py  results.md
assignment3/: CMakeLists.txt  run
assignment3/src/: assignment_1.cpp  water.cpp  water.h
assignment3/src/math/: matrix3d.cpp  matrix3d.h
assignment3/src/mygl/: base.h  camera.cpp  camera.h  geometry.h  mesh.cpp  mesh.h  shader.cpp  shader.h
assignment3/src/shader/: default.frag
assignment4/: CMakeLists.txt
assignment4/assets/boat/: boat.mtl
assignment4/assets/water/: water.mtl
assignment4/src/: assignment_2.cpp  water.h
assignment4/src/math/: vector2d.cpp  vector3d.cpp
assignment4/src/mygl/: base.cpp  camera.h  framebuffer.cpp  mesh.h  model.h  texture.cpp
assignment4/src/shader/: color.frag  water.frag  water.vert
assignment5/: CMakeLists.txt  run
assignment5/assets/boat/: LICENSE.txt  boat.mtl
assignment5/assets/water_01/: water.mtl
assignment5/src/: assignment_3.cpp  boat.cpp  boat.h  light.h
assignment5/src/math/: matrix3d.h  matrix4d.cpp  vector2d.cpp  vector4d.cpp
assignment5/src/mygl/: camera.cpp  cube_map.cpp  cube_map.h  geometry.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.h  texture.h
assignment5/src/shader/: blinn_phong.frag  color.frag  cube_map.frag  cube_map.vert  default.vert  water.frag  water.vert
final_project/: CMakeLists.txt  README.md  run
final_project/assets/: Lowpoly_City_Free_Pack.mtl
final_project/src/: assignment_2.cpp  tinyobjloader_demo.cpp  water.cpp
final_project/src/math/: matrix4d.h  vector2d.h  vector3d.h  vector4d.h
final_project/src/mygl/: base.h  camera.cpp  camera.h  framebuffer.h  geometry.h  mesh.cpp  mesh.h  model.cpp  shader.cpp  shader.h
final_project/src/shader/: DepthRTT.frag  DepthRTT.vert  color.frag  default.vert
